tests/reference/asr-generics_01-d616074.stderr
semantic error: Binary operations are not allowed between non-number variables
 --> tests/../integration_tests/generics_01.py:6:12
  |
6 |     return x + y
  |            ^^^^^ 
